--- a/index.html
+++ b/index.html
@@ -1,23 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>challange Pw Praktikum 3</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <title>Challenge_PW praktikum 2</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="main.js"></script>
+    <header
+      class="container d-flex flex-wrap justify-content-between align-items-center py-3 bg-primary"
+    >
+      <a href="#" class="text-decoration-none text-white fs-2">Hyada</a>
+      <nav class="nav">
+        <a class="nav-link text-white" href="#">HOME</a>
+        <a class="nav-link text-white" href="#">ABOUT</a>
+        <a class="nav-link text-white" href="#">PRODUCTS</a>
+        <a class="nav-link text-white" href="#">CONTACT</a>
+      </nav>
+    </header>
+    <main class="container">
+      <div class="col">
+        <div class="col-md-6">
+          <div class="card mb-3">
+            <div class="card-body">
+              <h2 class="card-title">Biodata</h2>
+              <p class="card-text">
+                Halo saya haydar test Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Corrupti vel laboriosam, hic ullam
+                consequuntur est tempora. Dolorum eaque odio, ea, nostrum aut
+                non aliquid, et facere iste perspiciatis quod voluptates.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="card mb-3">
+            <div class="card-body">
+              <h2 class="card-title">Pengalaman Kerja</h2>
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col">Tahun Pekerjaan</th>
+                    <th scope="col">Posisi Jabatan</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>2023 wibu akut</td>
+                    <td>Digital Marketer</td>
+                  </tr>
+                  <tr>
+                    <td>2024 wibu parah</td>
+                    <td>Public Relations</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="container py-3 bg-primary text-white">
+      <p>Copyright Challenge Pemro Website</p>
+    </footer>
   </body>
 </html>
